# Distributional_RL_Decision_and_Control

./: .gitignore  .gitmodules  README.md  pipREQ.txt
pretrained_models/: traced_AC_IQN_model.pt  traced_DDPG_model.pt  traced_DQN_model.pt  traced_IQN_model.pt  traced_SAC_model.pt
train_RL_agents/: env_visualizer.py  save_model_to_torch_script.py  train_RL_agents.py
train_RL_agents/config/: ac_iqn.json  ddpg.json  dqn.json  iqn.json  rainbow.json  sac.json
train_RL_agents/marinenav_env/: __init__.py  setup.py
train_RL_agents/marinenav_env/envs/: __init__.py  marinenav_env.py
train_RL_agents/marinenav_env/envs/utils/: robot.py
train_RL_agents/policy/: AC_IQN_model.py  AC_IQN_model_dtype_double.py  DDPG_model.py  DDPG_model_dtype_double.py  DQN_model.py  DQN_model_dtype_double.py  IQN_model.py  IQN_model_dtype_double.py  Rainbow_model.py  Rainbow_model_dtype_double.py  SAC_model.py  SAC_model_dtype_double.py  agent.py  replay_buffer.py  replay_memory_rainbow.py  trainer.py
train_RL_agents/scripts/: plot_training_results.py  visualize_eval_episode.py  visualize_vrx_trajectory.py  vrx_exp_config_example.py
vrx/: file_modification_note.txt
vrx-2.3.2/: file_modification_note.txt  run_vrx_experiments.py
vrx-2.3.2/action_planner/: CMakeLists.txt
vrx-2.3.2/action_planner/launch/: action_planner.launch.py
vrx-2.3.2/action_planner/src/: action_planner_node.cpp
vrx-2.3.2/cluster_msg/: CMakeLists.txt
vrx-2.3.2/collision_detector/: package.xml
vrx-2.3.2/collision_detector/launch/: collision_detector.launch.py
vrx-2.3.2/collision_detector/src/: collision_detector_node.cpp
vrx-2.3.2/lidar_processor/: CMakeLists.txt  package.xml
vrx-2.3.2/lidar_processor/src/: lidar_processor_node.cpp
vrx-2.3.2/state_msg/: CMakeLists.txt
vrx-2.3.2/state_processor/: CMakeLists.txt  package.xml
vrx-2.3.2/state_processor/src/: state_processor_node.cpp  state_processor_node_imu.cpp
vrx-2.3.2/vrx_gz/: package.xml
vrx-2.3.2/vrx_gz/launch/: competition.launch.py
vrx-2.3.2/vrx_gz/models/coast_waves/: model.sdf
vrx-2.3.2/vrx_gz/src/vrx_gz/: launch.py  payload_bridges.py
vrx-2.3.2/vrx_gz/worlds/: sydney_regatta.sdf
vrx-2.3.2/vrx_ros/: CMakeLists.txt
vrx/action_planner/: package.xml
vrx/cluster_msg/: package.xml
vrx/cluster_msg/msg/: PointCloudCluster.msg
vrx/collision_detector/: CMakeLists.txt
vrx/docker/: Dockerfile.base  Dockerfile.devel
vrx/lidar_processor/launch/: lidar_processor.launch.py
vrx/robot_info_msg/: CMakeLists.txt  package.xml
vrx/robot_info_msg/msg/: RobotInfo.msg
vrx/state_msg/: package.xml
vrx/state_msg/msg/: State.msg
vrx/state_processor/launch/: state_processor.launch.py
vrx/vrx_gz/: package.xml
vrx/vrx_gz/src/vrx_gz/: launch.py
vrx/vrx_gz/worlds/: sydney_regatta.sdf  sydney_regatta_original.sdf
vrx/vrx_urdf/vrx_gazebo/config/: rviz_vrx_multi.rviz
vrx/vrx_urdf/vrx_gazebo/launch/: rviz.launch.py
vrx/vrx_urdf/wamv_gazebo/urdf/: wamv_gazebo.urdf.xacro
vrx/vrx_urdf/wamv_gazebo/urdf/components/: wamv_imu.xacro
